--- a/app/src/main/res/layout/my_row.xml
+++ b/app/src/main/res/layout/my_row.xml
@@ -12,7 +12,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="260dp">
+            android:layout_height="wrap_content">
 
             <ProgressBar
                 android:id="@+id/progressbar"
@@ -44,29 +44,33 @@
                 android:visibility="invisible"
                 app:layout_constraintBottom_toTopOf="@+id/news_title_txt"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/thumbnail_input_img" />
+                app:layout_constraintTop_toBottomOf="@+id/thumbnail_input_img"
+                android:padding="5sp"/>
 
             <TextView
                 android:id="@+id/news_title_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
+                android:layout_marginStart="10dp"
+                android:maxLines="4"
                 android:text="TextView"
-                android:textSize="20sp"
+                android:textColor="@color/black"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/news_id_txt"
                 app:layout_constraintTop_toTopOf="@+id/news_id_txt"
-                android:maxLines="1"/>
+                android:padding="1sp"/>
 
             <TextView
                 android:id="@+id/news_sc_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:maxLines="4"
                 android:text="TextView"
-                android:textSize="16sp"
+                android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="@+id/news_title_txt"
                 app:layout_constraintTop_toBottomOf="@+id/news_title_txt"
-                android:maxLines="2"/>
+                android:padding="1sp"/>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
