--- a/app/src/main/res/layout/my_row2.xml
+++ b/app/src/main/res/layout/my_row2.xml
@@ -31,10 +31,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
-                android:maxLines="1"
+                android:maxLines="2"
                 android:text="TextView"
                 android:textSize="20dp"
                 android:textStyle="bold"
+                android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/news_id_txt" />
 
@@ -42,6 +43,7 @@
                 android:id="@+id/news_sc_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:textSize="16dp"
                 android:text="TextView"
                 app:layout_constraintStart_toStartOf="@+id/news_title_txt"
