--- a/app/src/main/res/layout/row_news_manage.xml
+++ b/app/src/main/res/layout/row_news_manage.xml
@@ -12,7 +12,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="260dp">
+            android:layout_height="wrap_content">
 
             <ProgressBar
                 android:id="@+id/progressbar"
@@ -43,13 +43,16 @@
                 android:textStyle="bold"
                 app:layout_constraintBottom_toTopOf="@+id/news_title_txt"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/thumbnail_input_img" />
+                app:layout_constraintTop_toBottomOf="@+id/thumbnail_input_img"
+                android:textColor="@color/black"
+                />
 
             <TextView
                 android:id="@+id/news_title_txt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
+                android:textColor="@color/black"
                 android:text="TextView"
                 android:textSize="20sp"
                 android:textStyle="bold"
@@ -73,10 +76,10 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.515"
+                app:layout_constraintHorizontal_bias="0.542"
                 app:layout_constraintStart_toEndOf="@+id/edit"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.875"
+                app:layout_constraintVertical_bias="0.631"
                 app:srcCompat="@drawable/baseline_delete_24" />
 
             <ImageButton
@@ -85,10 +88,10 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.774"
+                app:layout_constraintHorizontal_bias="0.771"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.875"
+                app:layout_constraintVertical_bias="0.631"
                 app:srcCompat="@drawable/baseline_edit_24" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
