--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -6,7 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".AdminAccountFragment">
 
-
+    <ScrollView
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -126,4 +129,5 @@
 
 
     </LinearLayout>
+    </ScrollView>
 </FrameLayout>
